garde/tests/ui/compile-fail/no_validation.stderr
error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs
  |
  |     field: u64,
  |            ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs
  |
  | struct Tuple(u64);
  |              ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs
  |
  |     Struct { field: u64 },
  |                     ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs
  |
  |     Tuple(u64),
  |           ^^^
